--- a/process.tex
+++ b/process.tex
@@ -66,11 +66,13 @@
 				\item Requirements analysis: Specify and refine
 					requirements to be completed during this
 					iteration. Update Github issues with
-					deadline and information.
+					deadline and information. Also include
+					future requirements.
 				\item Design: Document a potential solution for
 					the requirements. Choose languages and
 					build tools. Report validation and
-					verification strategy.
+					verification strategy. Include impact of
+					design on future requirements.
 				\item Code: Articulate solution into code.
 				\item Validate and verify: Make sure
 					requirements were met and requirements
